--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -7,5 +7,27 @@
 		<% @line_item_id = key %>
 		<%= render value %>
 	<% end %>
+
+</div>
+<div class="container">
+	<div class="well">
+		<h4>All payments held with RUR</h4>
+	</div>
+	
+	<div class="panel panel-success">
+		<div class="panel-heading">
+			<h2> 
+				Pay for products (<span id="products_cost_in_cart"><%= products_cost %></span>  
+								   <span class="glyphicon glyphicon-rub"></span>)
+			</h2>
+		</div>
+		<div class="panel-body">
+		  	<%= link_to 'http://e-pay.by/', :target => "_blank"  do %>
+				Visa, Master-card
+				<i class="fa fa-credit-card-alt" aria-hidden="true"></i>
+			<% end %>
+		</div>
+	</div>
+	
 </div>
 
