--- a/app/views/line_items/destroy.js.erb
+++ b/app/views/line_items/destroy.js.erb
@@ -3,5 +3,6 @@ $(document).ready(function() {
 		$(this).closest(".col-sm-4").remove()
 		$("span#count-products_in_cart").text("Cart(<%= products_count %>)")
 		$('#cart').effect('highlight', {color: "gray"}, 1000)
+		$('span#products_cost_in_cart').text("<%= products_cost %>")
 	})
 })
